<resources>
    <string name="app_name">VOIP CALL</string>
    <string name="call">CALL</string>
    <string name="chat">CHAT</string>
    <string name="profile">PROFILE</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Sign_In">Sign In</string>
    <string name="Cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="client_id">Client Id</string>
    <string name="client_name">Client Name</string>
    <string name="default_notification_channel_id">1</string>
    <string name="msg_token_fmt">47</string>
    <string name="fcm_message">Hey</string>
    <string name="msg_subscribed">Subscribed</string>
    <string name="msg_subscribe_failed">Not Subscribed</string>
</resources>
