<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rec1"
    android:orientation="vertical"
    android:weightSum="10">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0.2"
        android:background="@color/colorPrimaryDarker">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pagerv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:paddingStart="4dp"
        android:paddingEnd="4dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="0.81"
        app:tabBackground="@color/colorPrimaryDark"
        app:tabGravity="fill"
        app:tabIndicatorAnimationDuration="1000"
        app:tabIndicatorGravity="bottom"
        app:tabIndicatorHeight="6dp"
        app:tabIndicatorColor="@color/colorAccent"
        app:tabIndicatorFullWidth="true"
        app:tabInlineLabel="true"
        app:tabRippleColor="@color/colorPrimaryDark"
        app:tabSelectedTextColor="@color/colorAccent"
        app:tabTextColor="@color/colorPrimary"
        app:tabUnboundedRipple="true">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbarSize="12dp"
            android:text="@string/call" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile" />

    </com.google.android.material.tabs.TabLayout>

</LinearLayout>