<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rec1"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="64dp"
            android:drawableLeft="@drawable/ic_key"
            android:fontFamily="@font/montserrat"
            android:gravity="center|bottom"
            android:letterSpacing="0.1"
            android:text="Sign In"
            android:textColor="@color/colorAccent"
            android:textSize="55sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/temail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="4dp"
                android:textColorHint="#3E3E3E"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Email Id"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="#2D2D2D"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText,RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tpass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="32dp"
                android:padding="4dp"
                android:textColorHint="#3E3E3E"
                app:hintTextColor="@color/colorAccent"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText,RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="register"
                    android:padding="15dp"
                    android:text="@string/Sign_Up"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

                <Button
                    style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="#3E3E3E"
                    android:elevation="20dp"
                    android:onClick="login"
                    android:padding="15dp"
                    android:text="@string/Sign_In"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:transitionName="name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>